--- a/app/src/main/res/layout/panduan_home.xml
+++ b/app/src/main/res/layout/panduan_home.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".PanduanActivity">
+    tools:context=".PanduanHomeActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ini Halaman Panduan Bahasa Isyarat"
+        android:text="@string/tes"
         android:textSize="18sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
