--- a/app/src/main/res/layout/kamera_gesture.xml
+++ b/app/src/main/res/layout/kamera_gesture.xml
@@ -6,14 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Preview Kamera -->
     <androidx.camera.view.PreviewView
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="match_parent"/>
 
-
+    <!-- Tombol untuk Ganti Kamera (berada di kanan atas) -->
     <ImageButton
         android:id="@+id/btn_switch_camera"
         android:layout_width="76dp"
@@ -27,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/white" />
 
-
+    <!-- TextView untuk Deteksi Bahasa Isyarat (akan menampilkan hasil deteksi) -->
     <TextView
         android:id="@+id/gesture_text"
         android:layout_width="match_parent"
@@ -39,6 +38,8 @@
         android:textColor="@color/black"
         android:background="@color/white"
         android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
