--- a/app/src/main/res/drawable/ic_switch_camera.xml
+++ b/app/src/main/res/drawable/ic_switch_camera.xml
@@ -1,13 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorOnSurface">
+    android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M16,7h-1l-1,-1h-4L9,7H8C6.9,7 6,7.9 6,9v6c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V9C18,7.9 17.1,7 16,7zM12,14c-1.1,0 -2,-0.9 -2,-2c0,-1.1 0.9,-2 2,-2s2,0.9 2,2C14,13.1 13.1,14 12,14z"/>
+        android:pathData="M20,4h-3.17L15,2H9L7.17,4H4C2.9,4 2,4.9 2,6v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6C22,4.9 21.1,4 20,4zM20,18H4V6h16V18zM12,7c2.76,0 5,2.24 5,5s-2.24,5 -5,5s-5,-2.24 -5,-5S9.24,7 12,7M12,9c-1.65,0 -3,1.35 -3,3s1.35,3 3,3s3,-1.35 3,-3S13.65,9 12,9z"/>
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M8.5,16.5L12,13L15.5,16.5L12,20z"/>
+        android:pathData="M14.5,9L16,7.5L17.5,9L19,7.5L17.5,6L16,7.5L14.5,6L13,7.5z"/>
 </vector>
