--- a/app/src/main/res/layout/kamera_gesture.xml
+++ b/app/src/main/res/layout/kamera_gesture.xml
@@ -1,14 +1,20 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
     tools:context=".KameraGestureActivity">
 
-    <!-- Camera Preview dengan constraint yang lebih eksplisit -->
+    <com.example.skripsi.OverlayView
+        android:id="@+id/overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.camera.view.PreviewView
         android:id="@+id/camera_preview"
         android:layout_width="match_parent"
@@ -17,26 +23,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:scaleType="fillCenter" />
+        app:implementationMode="performance" />
 
-    <!-- Overlay View dengan constraint yang sama persis dengan camera preview -->
-    <com.example.skripsi.OverlayView
-        android:id="@+id/overlay_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Switch Camera Button -->
     <ImageButton
         android:id="@+id/btn_switch_camera"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_margin="16dp"
-        android:background="@drawable/ic_switch_camera"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/switchcamera"
         android:src="@drawable/ic_switch_camera"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +38,6 @@
         app:tint="@android:color/white"
         android:elevation="8dp" />
 
-    <!-- Gesture Text dengan posisi yang lebih baik -->
     <TextView
         android:id="@+id/gesture_text"
         android:layout_width="0dp"
@@ -65,5 +58,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
